# pyunigps

./: .gitignore  CITATION.bib  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: checkpr.yml  main.yml
docs/: conf.py  index.rst  modules.rst  pyunigps.rst
examples/: benchmark.py  uniusage.py
src/pyunigps/: __init__.py  _version.py  exceptions.py  unihelpers.py  unimessage.py  unireader.py  unitypes_core.py  unitypes_get.py  unitypes_poll.py  unitypes_set.py
tests/: hex2bin.py  qgc.hex  test_parse.py  test_static.py  test_stream.py
